--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 
     defaultConfig {
         applicationId "com.heifara.buval.mareu2"
